# quant

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.data_store/catalog/: manifest.jsonl
.data_store/raw/: 1306.T.parquet  1321.T.parquet  1326.T.parquet  1540.T.parquet  1557.T.parquet  1570.T.parquet  1655.T.parquet  1656.T.parquet  1657.T.parquet  2255.T.parquet  2269.T.parquet  2413.T.parquet  2502.T.parquet  2559.T.parquet  2620.T.parquet  2631.T.parquet  2802.T.parquet  3382.T.parquet  4063.T.parquet  4502.T.parquet  4519.T.parquet  4543.T.parquet  4901.T.parquet  5108.T.parquet  6098.T.parquet  6273.T.parquet  6367.T.parquet  6501.T.parquet  6702.T.parquet  6758.T.parquet  6861.T.parquet  6902.T.parquet  6954.T.parquet  6981.T.parquet  7203.T.parquet  7267.T.parquet  7731.T.parquet  7733.T.parquet  7741.T.parquet  7974.T.parquet  (+23 more)
docs/: 2026-03-20-underperformance-investigation.md  2026-03-25-sharpe-optimization-target-results.md  progress.md
docs/research/: cross-sectional-factor-collapse-2026-04.md
scripts/: verify_engine_parity.py
src/: main.py  optimize.py
src/data/: bulk_loader.py  fundamental_loader.py  jquants_loader.py  jquants_universe.py  local_store.py  universe.py  yfinance_loader.py
src/engine/: commission.py  order_builder.py  runner.py  simple_runner.py  vectorbt_runner.py
src/paper/: bot.py  db.py  notifier.py
src/research/: __init__.py  approve.py  approved_params.py  artifacts.py  data_quality.py  data_validation.py  explain.py  registry.py  (+5 more)
tests/: __init__.py
(+94 files in other folders)
