[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant"
version = "0.1.0"
description = "Quant research and paper-trading project for Japanese equities"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alphalens-reloaded>=0.4.6",
    "backtrader==1.9.78.123",
    "jquants-api-client>=2.0.1",
    "matplotlib>=3.7.0",
    "optuna>=4.8.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "tabulate>=0.9.0",
    "vectorbt>=0.7.0",
    "yfinance>=0.2.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools]
packages = ["src"]
